--- a/radio-player/package.json
+++ b/radio-player/package.json
@@ -20,6 +20,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.3",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4"
   },
   "devDependencies": {
